added test integrals

--- a/integrals/test/livetest.ipynb
+++ b/integrals/test/livetest.ipynb
@@ -1,13 +1,45 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "Show test cases"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Integral(1/x, (-2, 2), Left(No solution))\n",
+      "Integral(sin(x)/x, (-2, 2), Left(No solution))\n",
+      "Integral(x**3, (0, 1), Right(0.25))\n",
+      "Integral(3*atan(x)**4/(x**2 + 1), (-pi/2, pi), Right(4.803684413))\n",
+      "Integral((3*x - 1)/sqrt(2*x**2 - x + 1), (-5, 10), Right(6.153561713))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from integrals.simpson.default_integrals import *\n",
+    "for integral in integrals:\n",
+    "    print(integral)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
