--- a/integrals/test/livetest.ipynb
+++ b/integrals/test/livetest.ipynb
@@ -24,11 +24,14 @@
       "Integral(x**3, (0, 1), Right(0.25))\n",
       "Integral((3*x - 1)/sqrt(2*x**2 - x + 1), (-5, 10), Right(8.4176339772))\n",
       "Integral(1/x, (-2, 2), Left(No solution))\n",
-      "Integral(sin(x)/x, (-2, 2), Left(No solution))\n"
+      "Integral(sin(x)/x, (-2, 2), Left(No solution))\n",
+      "Integral(exp(-x**2), (0, 1), Right(0.7468))\n"
      ]
     }
    ],
    "source": [
+    "import sympy.abc\n",
+    "\n",
     "from integrals.simpson.default_integrals import *\n",
     "from integrals.simpson.solver import *\n",
     "for integral in integrals:\n",
@@ -46,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -55,14 +58,15 @@
       "Integral(x**3, (0, 1), Right(0.25)) = 0.25000000000000017\n",
       "Integral((3*x - 1)/sqrt(2*x**2 - x + 1), (-5, 10), Right(8.4176339772)) = 8.417633977253962\n",
       "Integral(1/x, (-2, 2), Left(No solution)) = Function has unresolvable breaks at: [0.0]\n",
-      "Integral(sin(x)/x, (-2, 2), Left(No solution)) = nan\n"
+      "Integral(sin(x)/x, (-2, 2), Left(No solution)) = nan\n",
+      "Integral(exp(-x**2), (0, 1), Right(0.7468)) = 0.7468241328124274\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<lambdifygenerated-11>:2: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "<lambdifygenerated-4>:2: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  return sin(x)/x\n"
      ]
     }
