added multi point break test

--- a/integrals/test/livetest.ipynb
+++ b/integrals/test/livetest.ipynb
@@ -25,7 +25,8 @@
       "Integral((3*x - 1)/sqrt(2*x**2 - x + 1), (-5, 10), Right(8.4176339772))\n",
       "Integral(1/x, (-2, 2), Left(No solution))\n",
       "Integral(sin(x)/x, (-2, 2), Left(No solution))\n",
-      "Integral(exp(-x**2), (0, 1), Right(0.7468))\n"
+      "Integral(exp(-x**2), (0, 1), Right(0.7468))\n",
+      "Integral(1/(x + 1) + 1/x, (-2, 2), Left(No solution))\n"
      ]
     }
    ],
@@ -59,7 +60,8 @@
       "Integral((3*x - 1)/sqrt(2*x**2 - x + 1), (-5, 10), Right(8.4176339772)) = 8.417633977253962\n",
       "Integral(1/x, (-2, 2), Left(No solution)) = Function has unresolvable breaks at: [0.0]\n",
       "Integral(sin(x)/x, (-2, 2), Left(No solution)) = nan\n",
-      "Integral(exp(-x**2), (0, 1), Right(0.7468)) = 0.7468241328124274\n"
+      "Integral(exp(-x**2), (0, 1), Right(0.7468)) = 0.7468241328124274\n",
+      "Integral(1/(x + 1) + 1/x, (-2, 2), Left(No solution)) = Function has unresolvable breaks at: [-1.0, 0.0]\n"
      ]
     },
     {
