--- a/integrals/test/livetest.ipynb
+++ b/integrals/test/livetest.ipynb
@@ -21,20 +21,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Integral(x**3, (0, 1), Right(0.25))\n",
-      "Integral((3*x - 1)/sqrt(2*x**2 - x + 1), (-5, 10), Right(8.4176339772))\n",
-      "Integral(1/x, (-2, 2), Left(No solution))\n",
-      "Integral(sin(x)/x, (-2, 2), Left(No solution))\n",
-      "Integral(exp(-x**2), (0, 1), Right(0.7468))\n",
-      "Integral(1/(x + 1) + 1/x, (-2, 2), Left(No solution))\n"
+      "Integral(x**3, (0, 1))\n",
+      "Integral((3*x - 1)/sqrt(2*x**2 - x + 1), (-5, 10))\n",
+      "Integral(1/x, (-2, 2))\n",
+      "Integral(sin(x)/x, (-2, 2))\n",
+      "Integral(exp(-x**2), (0, 1))\n",
+      "Integral(1/(x + 1) + 1/x, (-2, 2))\n"
      ]
     }
    ],
    "source": [
-    "import sympy.abc\n",
-    "\n",
     "from integrals.simpson.default_integrals import *\n",
     "from integrals.simpson.solver import *\n",
+    "\n",
     "for integral in integrals:\n",
     "    print(integral)"
    ]
@@ -56,12 +55,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Integral(x**3, (0, 1), Right(0.25)) = 0.25000000000000017\n",
-      "Integral((3*x - 1)/sqrt(2*x**2 - x + 1), (-5, 10), Right(8.4176339772)) = 8.417633977253962\n",
-      "Integral(1/x, (-2, 2), Left(No solution)) = Function has unresolvable breaks at: [0.0]\n",
-      "Integral(sin(x)/x, (-2, 2), Left(No solution)) = nan\n",
-      "Integral(exp(-x**2), (0, 1), Right(0.7468)) = 0.7468241328124274\n",
-      "Integral(1/(x + 1) + 1/x, (-2, 2), Left(No solution)) = Function has unresolvable breaks at: [-1.0, 0.0]\n"
+      "Test 0. Integral(x**3, (0, 1))\n",
+      "Result: Right(0.25000000000000017)\n",
+      "Expected: Right(0.25)\n",
+      "Test verdict: True\n",
+      "--------------------\n",
+      "Test 1. Integral((3*x - 1)/sqrt(2*x**2 - x + 1), (-5, 10))\n",
+      "Result: Right(8.417633977253962)\n",
+      "Expected: Right(8.4176339772)\n",
+      "Test verdict: True\n",
+      "--------------------\n",
+      "Test 2. Integral(1/x, (-2, 2))\n",
+      "Result: Left([<integrals.classes.breaks.Break object at 0x7f38bbe5ce20>])\n",
+      "Expected: Left(No solution)\n",
+      "Test verdict: True\n",
+      "--------------------\n",
+      "Test 3. Integral(sin(x)/x, (-2, 2))\n",
+      "Result: Right(nan)\n",
+      "Expected: Right(0)\n",
+      "Test verdict: False\n",
+      "--------------------\n",
+      "Test 4. Integral(exp(-x**2), (0, 1))\n",
+      "Result: Right(0.7468241328124274)\n",
+      "Expected: Right(0.7468)\n",
+      "Test verdict: True\n",
+      "--------------------\n",
+      "Test 5. Integral(1/(x + 1) + 1/x, (-2, 2))\n",
+      "Result: Left([<integrals.classes.breaks.Break object at 0x7f38bbe6c310>, <integrals.classes.breaks.Break object at 0x7f38bbe7afd0>])\n",
+      "Expected: Left(No solution)\n",
+      "Test verdict: True\n",
+      "--------------------\n"
      ]
     },
     {
@@ -76,14 +99,31 @@
    "source": [
     "from integrals.classes.methods import MethodType\n",
     "\n",
+    "\n",
     "def show_result(result: Either):\n",
     "    if result.is_right():\n",
     "        return result.get_value()\n",
     "    return f'Function has unresolvable breaks at: {[err.x for err in result.get_error()]}'\n",
     "\n",
-    "for integral in integrals:\n",
-    "    result = calculate(integral, 1000, MethodType.MIDDLE)\n",
-    "    print(f\"{integral} = {show_result(result)}\")"
+    "\n",
+    "def is_test_passed(got, expected, eps=1e-3):\n",
+    "    if got.is_right() and expected.is_right():\n",
+    "        return abs(got.get_value() - expected.get_value()) < eps\n",
+    "    if got.is_left() and expected.is_right():\n",
+    "        return False\n",
+    "    return True\n",
+    "\n",
+    "def test_integrals():\n",
+    "    for i, integral in enumerate(integrals):\n",
+    "        print(f\"Test {i}. {integral}\")\n",
+    "        result = calculate(integral, 1000, MethodType.MIDDLE)\n",
+    "        print(f\"Result: {result}\")\n",
+    "        print(f\"Expected: {integral.newton_leibniz_answer}\")\n",
+    "        print(f\"Test verdict: {is_test_passed(result, integral.newton_leibniz_answer)}\")\n",
+    "        print(\"-\" * 20)\n",
+    "\n",
+    "\n",
+    "test_integrals()"
    ],
    "metadata": {
     "collapsed": false
