made some fixes

--- a/integrals/test/livetest.ipynb
+++ b/integrals/test/livetest.ipynb
@@ -56,35 +56,21 @@
      "output_type": "stream",
      "text": [
       "Test 0. Integral(x**3, (0, 1))\n",
-      "Result: Right(0.25000000000000017)\n",
+      "Result: Right(0.2500000000000003)\n",
       "Expected: Right(0.25)\n",
       "Test verdict: True\n",
       "--------------------\n",
       "Test 1. Integral((3*x - 1)/sqrt(2*x**2 - x + 1), (-5, 10))\n",
-      "Result: Right(8.417633977253962)\n",
+      "Result: Right(8.417633977254031)\n",
       "Expected: Right(8.4176339772)\n",
       "Test verdict: True\n",
       "--------------------\n",
       "Test 2. Integral(1/x, (-2, 2))\n",
-      "Result: Left([<integrals.classes.breaks.Break object at 0x7f38bbe5ce20>])\n",
+      "Result: Left([<integrals.classes.breaks.Break object at 0x7f0b5934e430>])\n",
       "Expected: Left(No solution)\n",
       "Test verdict: True\n",
       "--------------------\n",
-      "Test 3. Integral(sin(x)/x, (-2, 2))\n",
-      "Result: Right(nan)\n",
-      "Expected: Right(0)\n",
-      "Test verdict: False\n",
-      "--------------------\n",
-      "Test 4. Integral(exp(-x**2), (0, 1))\n",
-      "Result: Right(0.7468241328124274)\n",
-      "Expected: Right(0.7468)\n",
-      "Test verdict: True\n",
-      "--------------------\n",
-      "Test 5. Integral(1/(x + 1) + 1/x, (-2, 2))\n",
-      "Result: Left([<integrals.classes.breaks.Break object at 0x7f38bbe6c310>, <integrals.classes.breaks.Break object at 0x7f38bbe7afd0>])\n",
-      "Expected: Left(No solution)\n",
-      "Test verdict: True\n",
-      "--------------------\n"
+      "Test 3. Integral(sin(x)/x, (-2, 2))\n"
      ]
     },
     {
@@ -93,6 +79,26 @@
      "text": [
       "<lambdifygenerated-4>:2: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  return sin(x)/x\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result: Right(nan)\n",
+      "Expected: Right(0)\n",
+      "Test verdict: False\n",
+      "--------------------\n",
+      "Test 4. Integral(exp(-x**2), (0, 1))\n",
+      "Result: Right(0.7468241328124215)\n",
+      "Expected: Right(0.7468)\n",
+      "Test verdict: True\n",
+      "--------------------\n",
+      "Test 5. Integral(1/(x + 1) + 1/x, (-2, 2))\n",
+      "Result: Left([<integrals.classes.breaks.Break object at 0x7f0b599a8280>, <integrals.classes.breaks.Break object at 0x7f0b5954d310>])\n",
+      "Expected: Left(No solution)\n",
+      "Test verdict: True\n",
+      "--------------------\n"
      ]
     }
    ],
@@ -116,7 +122,7 @@
     "def test_integrals():\n",
     "    for i, integral in enumerate(integrals):\n",
     "        print(f\"Test {i}. {integral}\")\n",
-    "        result = calculate(integral, 1000, MethodType.MIDDLE)\n",
+    "        result = calculate(integral, 100000, MethodType.MIDDLE)\n",
     "        print(f\"Result: {result}\")\n",
     "        print(f\"Expected: {integral.newton_leibniz_answer}\")\n",
     "        print(f\"Test verdict: {is_test_passed(result, integral.newton_leibniz_answer)}\")\n",
