--- a/integrals/test/livetest.ipynb
+++ b/integrals/test/livetest.ipynb
@@ -24,7 +24,7 @@
       "Integral(x**3, (0, 1))\n",
       "Integral((3*x - 1)/sqrt(2*x**2 - x + 1), (-5, 10))\n",
       "Integral(1/x, (-2, 2))\n",
-      "Integral(sin(x)/x, (-2, 2))\n",
+      "Integral(sinc(x), (-2, 2))\n",
       "Integral(exp(-x**2), (0, 1))\n",
       "Integral(1/(x + 1) + 1/x, (-2, 2))\n"
      ]
@@ -56,46 +56,36 @@
      "output_type": "stream",
      "text": [
       "Test 0. Integral(x**3, (0, 1))\n",
-      "Result: Right(0.2500000000000003)\n",
+      "Result: Right(0.25)\n",
       "Expected: Right(0.25)\n",
+      "R = 0.0\n",
       "Test verdict: True\n",
       "--------------------\n",
       "Test 1. Integral((3*x - 1)/sqrt(2*x**2 - x + 1), (-5, 10))\n",
-      "Result: Right(8.417633977254031)\n",
+      "Result: Right(8.417633898388727)\n",
       "Expected: Right(8.4176339772)\n",
+      "R = 7.881127217501671e-08\n",
       "Test verdict: True\n",
       "--------------------\n",
       "Test 2. Integral(1/x, (-2, 2))\n",
-      "Result: Left([<integrals.classes.breaks.Break object at 0x7f0b5934e430>])\n",
+      "Result: Left([<integrals.classes.breaks.Break object at 0x7f18234e54f0>])\n",
       "Expected: Left(No solution)\n",
       "Test verdict: True\n",
       "--------------------\n",
-      "Test 3. Integral(sin(x)/x, (-2, 2))\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<lambdifygenerated-4>:2: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  return sin(x)/x\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Result: Right(nan)\n",
-      "Expected: Right(0)\n",
-      "Test verdict: False\n",
+      "Test 3. Integral(sinc(x), (-2, 2))\n",
+      "Result: Right(3.210825960346163)\n",
+      "Expected: Right(3.210884)\n",
+      "R = 5.803965383721632e-05\n",
+      "Test verdict: True\n",
       "--------------------\n",
       "Test 4. Integral(exp(-x**2), (0, 1))\n",
-      "Result: Right(0.7468241328124215)\n",
+      "Result: Right(0.746824132894176)\n",
       "Expected: Right(0.7468)\n",
+      "R = 2.4132894176021047e-05\n",
       "Test verdict: True\n",
       "--------------------\n",
       "Test 5. Integral(1/(x + 1) + 1/x, (-2, 2))\n",
-      "Result: Left([<integrals.classes.breaks.Break object at 0x7f0b599a8280>, <integrals.classes.breaks.Break object at 0x7f0b5954d310>])\n",
+      "Result: Left([<integrals.classes.breaks.Break object at 0x7f182356e460>, <integrals.classes.breaks.Break object at 0x7f1823505a00>])\n",
       "Expected: Left(No solution)\n",
       "Test verdict: True\n",
       "--------------------\n"
@@ -122,9 +112,11 @@
     "def test_integrals():\n",
     "    for i, integral in enumerate(integrals):\n",
     "        print(f\"Test {i}. {integral}\")\n",
-    "        result = calculate(integral, 100000, MethodType.MIDDLE)\n",
+    "        result = calculate(integral, 100, MethodType.MIDDLE)\n",
     "        print(f\"Result: {result}\")\n",
     "        print(f\"Expected: {integral.newton_leibniz_answer}\")\n",
+    "        if result.is_right() and integral.newton_leibniz_answer.is_right():\n",
+    "            print(f\"R = {abs(result.get_value() - integral.newton_leibniz_answer.get_value())}\")\n",
     "        print(f\"Test verdict: {is_test_passed(result, integral.newton_leibniz_answer)}\")\n",
     "        print(\"-\" * 20)\n",
     "\n",
