fixed issues with break points and removed unnecessary files

--- a/integrals/test/livetest.ipynb
+++ b/integrals/test/livetest.ipynb
@@ -24,7 +24,7 @@
       "Integral(x**3, (0, 1))\n",
       "Integral((3*x - 1)/sqrt(2*x**2 - x + 1), (-5, 10))\n",
       "Integral(1/x, (-2, 2))\n",
-      "Integral(sinc(x), (-2, 2))\n",
+      "Integral(sin(x)/x, (-2, 2))\n",
       "Integral(exp(-x**2), (0, 1))\n",
       "Integral(1/(x + 1) + 1/x, (-2, 2))\n"
      ]
@@ -62,20 +62,19 @@
       "Test verdict: True\n",
       "--------------------\n",
       "Test 1. Integral((3*x - 1)/sqrt(2*x**2 - x + 1), (-5, 10))\n",
-      "Result: Right(8.417633898388727)\n",
+      "Result: Left(['Unresolvable break at point 0.3333333333333333'])\n",
       "Expected: Right(8.4176339772)\n",
-      "R = 7.881127217501671e-08\n",
-      "Test verdict: True\n",
+      "Test verdict: False\n",
       "--------------------\n",
       "Test 2. Integral(1/x, (-2, 2))\n",
-      "Result: Left([<integrals.classes.breaks.Break object at 0x7f18234e54f0>])\n",
+      "Result: Left(['Unresolvable break at point 0'])\n",
       "Expected: Left(No solution)\n",
       "Test verdict: True\n",
       "--------------------\n",
-      "Test 3. Integral(sinc(x), (-2, 2))\n",
-      "Result: Right(3.210825960346163)\n",
+      "Test 3. Integral(sin(x)/x, (-2, 2))\n",
+      "Result: Right(3.210825955901718)\n",
       "Expected: Right(3.210884)\n",
-      "R = 5.803965383721632e-05\n",
+      "R = 5.80440982820285e-05\n",
       "Test verdict: True\n",
       "--------------------\n",
       "Test 4. Integral(exp(-x**2), (0, 1))\n",
@@ -85,7 +84,7 @@
       "Test verdict: True\n",
       "--------------------\n",
       "Test 5. Integral(1/(x + 1) + 1/x, (-2, 2))\n",
-      "Result: Left([<integrals.classes.breaks.Break object at 0x7f182356e460>, <integrals.classes.breaks.Break object at 0x7f1823505a00>])\n",
+      "Result: Left(['Unresolvable break at point -1', 'Unresolvable break at point 0'])\n",
       "Expected: Left(No solution)\n",
       "Test verdict: True\n",
       "--------------------\n"
@@ -114,10 +113,10 @@
     "        print(f\"Test {i}. {integral}\")\n",
     "        result = calculate(integral, 100, MethodType.MIDDLE)\n",
     "        print(f\"Result: {result}\")\n",
-    "        print(f\"Expected: {integral.newton_leibniz_answer}\")\n",
-    "        if result.is_right() and integral.newton_leibniz_answer.is_right():\n",
-    "            print(f\"R = {abs(result.get_value() - integral.newton_leibniz_answer.get_value())}\")\n",
-    "        print(f\"Test verdict: {is_test_passed(result, integral.newton_leibniz_answer)}\")\n",
+    "        print(f\"Expected: {integral.expected_answer}\")\n",
+    "        if result.is_right() and integral.expected_answer.is_right():\n",
+    "            print(f\"R = {abs(result.get_value() - integral.expected_answer.get_value())}\")\n",
+    "        print(f\"Test verdict: {is_test_passed(result, integral.expected_answer)}\")\n",
     "        print(\"-\" * 20)\n",
     "\n",
     "\n",
