added range input for user

--- a/integrals/test/livetest.ipynb
+++ b/integrals/test/livetest.ipynb
@@ -21,12 +21,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Integral(x**3, (0, 1))\n",
-      "Integral((3*x - 1)/sqrt(2*x**2 - x + 1), (-5, 10))\n",
-      "Integral(1/x, (-2, 2))\n",
-      "Integral(sin(x)/x, (-2, 2))\n",
-      "Integral(exp(-x**2), (0, 1))\n",
-      "Integral(1/(x + 1) + 1/x, (-2, 2))\n"
+      "Integral(x**3)\n",
+      "Integral((3*x - 1)/sqrt(2*x**2 - x + 1))\n",
+      "Integral(1/x)\n",
+      "Integral(sin(x)/x)\n",
+      "Integral(exp(-x**2))\n",
+      "Integral(1/(x + 1) + 1/x)\n"
      ]
     }
    ],
@@ -49,41 +49,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test 0. Integral(x**3, (0, 1))\n",
+      "Test 1. Integral(x**3)\n",
+      "Range = [0;1]\n",
       "Result: Right(0.25)\n",
       "Expected: Right(0.25)\n",
       "R = 0.0\n",
       "Test verdict: True\n",
       "--------------------\n",
-      "Test 1. Integral((3*x - 1)/sqrt(2*x**2 - x + 1), (-5, 10))\n",
+      "Test 2. Integral((3*x - 1)/sqrt(2*x**2 - x + 1))\n",
+      "Range = [-5;10]\n",
       "Result: Left(['Unresolvable break at point 0.3333333333333333'])\n",
       "Expected: Right(8.4176339772)\n",
       "Test verdict: False\n",
       "--------------------\n",
-      "Test 2. Integral(1/x, (-2, 2))\n",
+      "Test 3. Integral(1/x)\n",
+      "Range = [-2;2]\n",
       "Result: Left(['Unresolvable break at point 0'])\n",
       "Expected: Left(No solution)\n",
       "Test verdict: True\n",
       "--------------------\n",
-      "Test 3. Integral(sin(x)/x, (-2, 2))\n",
+      "Test 4. Integral(sin(x)/x)\n",
+      "Range = [-2;2]\n",
       "Result: Right(3.210825955901718)\n",
       "Expected: Right(3.210884)\n",
       "R = 5.80440982820285e-05\n",
       "Test verdict: True\n",
       "--------------------\n",
-      "Test 4. Integral(exp(-x**2), (0, 1))\n",
+      "Test 5. Integral(exp(-x**2))\n",
+      "Range = [0;1]\n",
       "Result: Right(0.746824132894176)\n",
       "Expected: Right(0.7468)\n",
       "R = 2.4132894176021047e-05\n",
       "Test verdict: True\n",
       "--------------------\n",
-      "Test 5. Integral(1/(x + 1) + 1/x, (-2, 2))\n",
+      "Test 6. Integral(1/(x + 1) + 1/x)\n",
+      "Range = [-2;2]\n",
       "Result: Left(['Unresolvable break at point -1', 'Unresolvable break at point 0'])\n",
       "Expected: Left(No solution)\n",
       "Test verdict: True\n",
@@ -110,7 +116,8 @@
     "\n",
     "def test_integrals():\n",
     "    for i, integral in enumerate(integrals):\n",
-    "        print(f\"Test {i}. {integral}\")\n",
+    "        print(f\"Test {i + 1}. {integral}\")\n",
+    "        print(f\"Range = [{integral.ranges[0]};{integral.ranges[1]}]\")\n",
     "        result = calculate(integral, 100, MethodType.MIDDLE)\n",
     "        print(f\"Result: {result}\")\n",
     "        print(f\"Expected: {integral.expected_answer}\")\n",
